syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_dq_rule_execute_sql;


message DsDqRuleExecuteSql {

     int32 id= 1;
     optional int32  index= 2;
     optional string sql=3 ;
     optional string table_alias= 4;
     optional int32 type=5 ;
     optional string create_time= 6;
     optional string update_time= 7;
     optional bool is_error_output_sql= 8;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsDqRuleExecuteSqlService {
  rpc ListDsDqRuleExecuteSqls(ListDsDqRuleExecuteSqlsRequest) returns (ListDsDqRuleExecuteSqlsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsDqRuleExecuteSqls"
    };
  }

  rpc GetDsDqRuleExecuteSql(GetDsDqRuleExecuteSqlRequest) returns (DsDqRuleExecuteSql) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsDqRuleExecuteSqls/*}"
    };
  }

  rpc CreateDsDqRuleExecuteSql(CreateDsDqRuleExecuteSqlRequest) returns (DsDqRuleExecuteSql) {
    option (google.api.http) = {
      post: "/v1alpha1/DsDqRuleExecuteSqls"
      body: "DsDqRuleExecuteSql"
    };
  }

  rpc UpdateDsDqRuleExecuteSql(UpdateDsDqRuleExecuteSqlRequest) returns (DsDqRuleExecuteSql) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsDqRuleExecuteSql.name=DsDqRuleExecuteSqls/*}"
      body: "DsDqRuleExecuteSql"
    };
  }

  rpc DeleteDsDqRuleExecuteSql(DeleteDsDqRuleExecuteSqlRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsDqRuleExecuteSqls/*}"
    };
  }
}

// message DsDqRuleExecuteSql {
// ! This should be defined elsewhere
// }

message ListDsDqRuleExecuteSqlsRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsDqRuleExecuteSqlsResponse {
  // The field name should match the noun "DsDqRuleExecuteSql" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsDqRuleExecuteSql DsDqRuleExecuteSqls = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsDqRuleExecuteSqlRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsDqRuleExecuteSqlRequest {
  // The parent resource name where the DsDqRuleExecuteSql is to be created.
  string parent = 1;

  // The DsDqRuleExecuteSql id to use for this DsDqRuleExecuteSql.
  string DsDqRuleExecuteSql_id = 2;

  // The DsDqRuleExecuteSql resource to create.
  // The field name should match the Noun in the method name.
  DsDqRuleExecuteSql DsDqRuleExecuteSql = 3;
}

message UpdateDsDqRuleExecuteSqlRequest {
  // The DsDqRuleExecuteSql resource which replaces the resource on the server.
  DsDqRuleExecuteSql DsDqRuleExecuteSql = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsDqRuleExecuteSqlRequest {
  // The resource name of the DsDqRuleExecuteSql to be deleted.
  string name = 1;
}
